*** 19990805_2 by lusky
fixed rehash dump, would core on bad admin line


*** 19990805_1 by lusky
bumped patchlevel for new tarball
added KNOWN BUGS to relnotes
bug in stats Q line found by Dustin Marquess (Jailbird)
in client.h, umodes were moved to umodes in client, forgot to redefine the macros for SetInvisible etc.
user_mode allowed decrement of oper count even if client was not opered



*** 19990804_2 by lusky
bumped patchlevel to b92 for new beta snapshot


*** 19990804_1 by lusky
fix for IP Klines in stats from Diane
fix for broken m_unkline.c from Diane it would unkline everything
fix for lusers from Tom


*** 19990803_2 by lusky
bumped patchlevel for new tarball


*** 19990803_1 by lusky
changed all occurances of USE_ALLOW_OP to NO_CHANOPS_WHEN_SPLIT
fix to prevent coring on malformed conf lines


*** 19990802_4 by lusky
changed a syslog to log for Bleep


*** 19990802_3 by lusky
Updated documentation files, removed -DNDEBUG from the default CFLAGS,
and sycn;d config.h.dist to config.h


*** 19990802_2 by lusky
added release notes to the tree


*** 19990802_1 by lusky
fixed 216 reply
bug in mtrie_conf.c causing ~ klines not to work
major bug in s_conf.c to do with reading of kline.conf


*** Entries below this point were entered manually

version hybrid-6-b90 02-Aug-1999
* updated patchlevel in anticipation of snapshot release
-Rodder

version hybrid-6-current 26-Jun-1999 through 01-Aug-1999

1999/08/01 (tomh) - typos 
1999/08/01 (tomh) - setup_signals just before init_sys 
1999/08/01 (tomh) - remove uneeded checks in configure.in 
1999/08/01 (tomh) - move dbuf_init after init_sys 
1999/08/01 (tomh) - more getopt notes 
1999/08/01 (tomh) - more cleanups 
1999/08/01 (tomh) - misc cleanups 
1999/08/01 (tomh) - minor cleanups 
1999/08/01 (tomh) - log message cleanups 
1999/08/01 (tomh) - log m_dies 
1999/08/01 (tomh) - include getopt.h to avoid declaring extern. hopefully this should work - everywhere. Solaris has getopt. 