@@ -1,3 +1,7 @@
+*** 19990806_1 by lusky
+diane fixed another unkline bug.
+
+
 *** 19990805_2 by lusky
 fixed rehash dump, would core on bad admin line
 
